--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,7 +10,7 @@ Order successful!
 {% endblock %}
 
 {% block content %}
-
+<!-- Order confirmation title -->
 <div class="row">
     <div class="col text-center">
         <h2 class="fw-bold mb-4">Thank You</h2>
@@ -28,7 +28,7 @@ Order successful!
                     <small class="text-muted">Order Info:</small>
                 </div>
             </div>
-
+            <!-- Order Number-->
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black fw-bold">Order Number</p>
@@ -38,6 +38,7 @@ Order successful!
                 </div>
             </div>
             <hr>
+            <!-- Order Date -->
             <div class="row">
                 <div class="col-12 col-md-4">
                     <p class="mb-0 text-black fw-bold">Order Date</p>
@@ -52,6 +53,7 @@ Order successful!
                     <small class="text-muted">Order Details:</small>
                 </div>
             </div>
+            <!-- Product name, quantity and price -->
             {% for item in order.lineitems.all %}
             <div class="row">
                 <div class="col-12 col-md-4">
@@ -65,6 +67,7 @@ Order successful!
             </div>
             {% endfor %}
             <hr>
+            <!-- Deliery Info -->
             <div class="row">
                 <div class="col">
                     <small class="text-muted">Delivering To:</small>
@@ -149,6 +152,7 @@ Order successful!
                 </div>
             </div>
             <hr>
+            <!-- Billing Info -->
             <div class="row">
                 <div class="col">
                     <small class="text-muted">Billing Info:</small>
@@ -188,6 +192,7 @@ Order successful!
     <div class="col-12 text-center">
         <p class="fw-semibold">Thank you for shopping with A to PC!</p>
         {% if from_profile %}
+        <!-- Button to User profile -->
         <a href="{% url 'profile' %}" class="btn btn-dark my-2">
             <span class="icon me-2">
                 <i class="fas fa-angle-left"></i>
@@ -195,6 +200,7 @@ Order successful!
             <span class="text-uppercase">Back to Profile</span>
         </a>
         {% else %}
+        <!-- Button to products with latest deals and clearance category -->
         <a href="{% url 'products' %}?category=latest_deals,clearance" class="btn btn-primary my-2">
             <span class="icon me-2">
                 <i class="fas fa-gifts"></i>
