--- a/static/css/base.css
+++ b/static/css/base.css
@@ -67,6 +67,10 @@ select {
     font-size: clamp(10px, calc(10px + 0.5vw), 18px);
 }
 
+.mobile-list {
+    width: 80%;
+}
+
 /* Site Footer */
 
 #social-icons a,
