--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -8,138 +8,162 @@ My bag
 
 
 {% block content %}
-    <div class="row">
-        <div class="col">
-            <h2 class="mb-4 text-center fw-bold">Shopping bag</h2>
-            <hr>
-        </div>
+<!-- Shopping bag title-->
+<div class="row">
+    <div class="col">
+        <h2 class="mb-4 text-center fw-bold">Shopping bag</h2>
+        <hr>
     </div>
-
-    <div class="row">
-        <div class="col">
-            {% if bag_items %}
-            <div class="d-block d-md-none">
-                <div class="row">
-                    <div class="col">
-                        {% include "bag/bag_total.html" %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        {% include "bag/checkout_buttons.html" %}
-                        <p class="text-muted mb-5">A summary of your bag contents is below.</p>
-                    </div>
-                </div>
-                {% for item in bag_items %}
-                    <div class="row">
-                        <div class="col-12 col-sm-6 mb-2">
-                            {% include "bag/product_image.html" %}
-                        </div>
-                        <div class="col-12 col-sm-6 mb-2">
-                            {% include "bag/product_info.html" %}
-                        </div>
-                        <div class="col-12 col-sm-6 order-sm-last">
-                            <p class="my-0">Price Each: £{{ item.product.price }}</p>
-                            <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                        </div>
-                        <div class="col-12 col-sm-6">
-                            {% include "bag/quantity_form.html" %}
-                        </div>
-                    </div>
-                    <div class="row"><div class="col"><hr></div></div>
-                {% endfor %}
-                <div class="btt-button shadow-sm border border-black">
-                    <a class="btt-link d-flex h-100">
-                        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-                    </a>	
+</div>
+<!-- Bag display -->
+<div class="row">
+    <div class="col">
+        {% if bag_items %}
+        <!-- Display for small screens only -->
+        <div class="d-block d-md-none">
+            <div class="row">
+                <div class="col">
+                    <!-- Show total In bag -->
+                    {% include "bag/bag_total.html" %}
                 </div>
             </div>
-            <div class="table-responsive rounded d-none d-md-block">
-                <table class="table table-sm">
-                    <thead class="text-black">
-                        <tr>
-                            <th scope="col">Product Info</th>
-                            <th scope="col"></th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Qty</th>
-                            <th scope="col">Subtotal</th>
-                        </tr>
-                    </thead>
-
-                    {% for item in bag_items %}
-                    <tr>
-                        <td class="p-3 w-25">
-                            {% include "bag/product_image.html" %}
-                        </td>
-                        <td class="py-3 align-middle">
-                            {% include "bag/product_info.html" %}
-                        </td>
-                        <td class="py-3 align-middle">
-                            <p class="my-0">£{{ item.product.price }}</p>
-                        </td>
-                        <td class="py-3 align-middle">
-                            {% include "bag/quantity_form.html" %}
-                        </td>
-                        <td class="py-3 align-middle">
-                            <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    <tr>
-                        <td colspan="5" class="pt-5 text-end border-0">
-                            {% include "bag/bag_total.html" %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="5" class="text-end border-0">
-                            {% include "bag/checkout_buttons.html" %}
-                        </td>
-                    </tr>
-                </table>
+            <div class="row">
+                <div class="col">
+                    <!-- Buttons for going to checkout or back to products -->
+                    {% include "bag/checkout_buttons.html" %}
+                    <p class="text-muted mb-5">A summary of your bag contents is below.</p>
+                </div>
             </div>
-            {% else %}
-            <div class="text-center">
-                <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'products' %}" class="btn btn-primary btn-lg">
-                    <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span class="text-uppercase">Keep Shopping</span>
+            {% for item in bag_items %}
+            <div class="row">
+                <div class="col-12 col-sm-6 mb-2">
+                    <!-- Product image display -->
+                    {% include "bag/product_image.html" %}
+                </div>
+                <div class="col-12 col-sm-6 mb-2">
+                    <!-- Product info display -->
+                    {% include "bag/product_info.html" %}
+                </div>
+                <div class="col-12 col-sm-6 order-sm-last">
+                    <!-- Product individual price and subtotal -->
+                    <p class="my-0">Price Each: £{{ item.product.price }}</p>
+                    <p><strong>Subtotal: </strong>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <!-- Bag quantity form -->
+                    {% include "bag/quantity_form.html" %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <hr>
+                </div>
+            </div>
+            {% endfor %}
+            <!-- Back to top button -->
+            <div class="btt-button shadow-sm border border-black">
+                <a class="btt-link d-flex h-100">
+                    <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                 </a>
             </div>
-            {% endif %}
         </div>
+        <!-- Display for medium screens and up -->
+        <div class="table-responsive rounded d-none d-md-block">
+            <table class="table table-sm">
+                <thead class="text-black">
+                    <tr>
+                        <th scope="col">Product Info</th>
+                        <th scope="col"></th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Qty</th>
+                        <th scope="col">Subtotal</th>
+                    </tr>
+                </thead>
+
+                {% for item in bag_items %}
+                <tr>
+                    <td class="p-3 w-25">
+                        <!-- Product image display -->
+                        {% include "bag/product_image.html" %}
+                    </td>
+                    <td class="py-3 align-middle">
+                        <!-- Product info display -->
+                        {% include "bag/product_info.html" %}
+                    </td>
+                    <td class="py-3 align-middle">
+                        <!-- Product individual price -->
+                        <p class="my-0">£{{ item.product.price }}</p>
+                    </td>
+                    <td class="py-3 align-middle">
+                        <!-- Bag quantity form -->
+                        {% include "bag/quantity_form.html" %}
+                    </td>
+                    <td class="py-3 align-middle">
+                        <!-- Bag subtotal -->
+                        <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                    </td>
+                </tr>
+                {% endfor %}
+                <tr>
+                    <td colspan="5" class="pt-5 text-end border-0">
+                        <!-- Total price -->
+                        {% include "bag/bag_total.html" %}
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="5" class="text-end border-0">
+                        <!-- Buttons for going to checkout or back to products -->
+                        {% include "bag/checkout_buttons.html" %}
+                    </td>
+                </tr>
+            </table>
+        </div>
+        {% else %}
+        <!-- If bag is empty -->
+        <div class="text-center">
+            <p class="lead mb-5">Your bag is empty.</p>
+            <a href="{% url 'products' %}" class="btn btn-primary btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
+        </div>
+        {% endif %}
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     // Scroll to top of the page on click
-    $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
+    $('.btt-link').click(function (e) {
+        window.scrollTo(0, 0)
     })
 </script>
 {% include 'products/includes/quantity_input_script.html' %}
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     });
-    
+
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken
+        };
 
         $.post(url, data)
-         .done(function() {
-            location.reload();
-        });
+            .done(function () {
+                location.reload();
+            });
     });
 </script>
 {% endblock %}
