--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -36,7 +36,7 @@
             <small>By: {{ blog_post.author }}</small>
         </div>
     </div>
-    <div class="col-8">
+    <div class="col-md-8">
         <div class="card-footer text-start bg-white ps-md-3 pe-md-3 pt-2 border-black rounded">
             {{ blog_post.post_content | safe }}
         </div>
