--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -1,67 +1,72 @@
-<li class="list-inline-item mx-0">
-    <a class="text-black nav-link d-block d-md-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <i class="fas fa-search"></i>
-            <p class="my-0">
-                Search
-            </p>
-        </div>
-    </a>
-    <div class="dropdown-menu rounded-0 border-0 w-100 p-3 my-0" aria-labelledby="mobile-search">
-        <form class="d-flex nav-item d-md-none" role="search" method="get" action="{% url 'products' %}">
-            <div class="input-group border-black nav-item">
-                <input class="form-control" type="search" name="q" placeholder="Search for products"
-                    aria-label="Search">
-                <button class="input-group-text" type="submit"><i class="fas fa-search"></i></button>
+<ul class="list-inline d-inline-flex justify-content-evenly mobile-list d-md-none">
+    <li class="list-inline-item mx-0">
+        <a class="text-black nav-link d-block d-md-none" href="#" id="mobile-search" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <i class="fas fa-search"></i>
+                <p class="my-0">
+                    Search
+                </p>
             </div>
-        </form>
-    </div>
-</li>
-<li class="list-inline-item mx-0">
-    <a class="text-black nav-link d-block d-md-none" href="{% url 'wishlist' %}">
-        <div class="text-center">
-            <i class="fas fa-heart"></i>
-            <p class="my-0">
-                Wishlist
-            </p>
+        </a>
+        <div class="dropdown-menu rounded-0 border-0 w-100 p-3 my-0" aria-labelledby="mobile-search">
+            <form class="d-flex nav-item d-md-none" role="search" method="get" action="{% url 'products' %}">
+                <div class="input-group border-black nav-item">
+                    <input class="form-control" type="search" name="q" placeholder="Search for products"
+                        aria-label="Search">
+                    <button class="input-group-text" type="submit"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
         </div>
-    </a>
-</li>
-<li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-md-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <i class="fas fa-user"></i>
-            <p class="my-0">
-                Account
-            </p>
-        </div>
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="user-options">
-        {% if request.user.is_authenticated %}
-        {% if request.user.is_superuser %}
+    </li>
+    <li class="list-inline-item mx-0">
+        <a class="text-black nav-link d-block d-md-none" href="{% url 'wishlist' %}">
+            <div class="text-center">
+                <i class="fas fa-heart"></i>
+                <p class="my-0">
+                    Wishlist
+                </p>
+            </div>
+        </a>
+    </li>
+    <li class="list-inline-item dropdown">
+        <a class="text-black nav-link d-block d-md-none" href="#" id="user-options-mobile" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <i class="fas fa-user"></i>
+                <p class="my-0">
+                    Account
+                </p>
+            </div>
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="user-options-mobile">
+            {% if request.user.is_authenticated %}
+            {% if request.user.is_superuser %}
             <li><a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a></li>
             <li><a href="{% url 'add_product' %}" class="dropdown-item">Add Product</a></li>
-        {% endif %}
+            {% endif %}
             <li><a href="{% url 'profile' %}" class="dropdown-item">My Profile</a></li>
             <li><a href="{% url 'account_change_password' %}" class="dropdown-item">Change Password</a></li>
             <li><a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a></li>
-        {% else %}
+            {% else %}
             <li><a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a></li>
             <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
-        {% endif %}
-    </ul>
-</li>
-<li class="list-inline-item">
-    <a class="nav-link d-block d-md-none {% if grand_total %}text-primary{% else %}text-black{% endif %}" href="{% url 'view_bag' %}">
-        <div class="text-center me-4">
-            <i class="fas fa-shopping-bag"></i>
-            <p class="my-0">
-                {% if grand_total %}
-                £{{ grand_total|floatformat:2 }}
-                {% else %}
-                Bag
-                {% endif %}
-            </p>
-        </div>
-    </a>
-</li>
+            {% endif %}
+        </ul>
+    </li>
+    <li class="list-inline-item">
+        <a class="nav-link d-block d-md-none {% if grand_total %}text-primary{% else %}text-black{% endif %}"
+            href="{% url 'view_bag' %}">
+            <div class="text-center me-4">
+                <i class="fas fa-shopping-bag"></i>
+                <p class="my-0">
+                    {% if grand_total %}
+                    £{{ grand_total|floatformat:2 }}
+                    {% else %}
+                    Bag
+                    {% endif %}
+                </p>
+            </div>
+        </a>
+    </li>
+</ul>
