feat: Add privacy policy and favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,14 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Potta+One&display=swap" rel="stylesheet">
+    <!-- Base CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+
     {% endblock %}
 
     {% block extra_css %}
@@ -181,7 +188,7 @@
                         {% endif %}
                         <li><a href="{% url 'about_us' %}">About Us</a></li>
                         <li><a href="{% url 'blog' %}">Blog</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <!-- Newsletter Signup -->
