fix: change product.average_rating to product.rating

--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -47,8 +47,8 @@ Delete Product
                     class="text-muted">{{ product.category.friendly_name }}</span>
             </p>
             {% endif %}
-            {% if product.average_rating %}
-            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5</small>
+            {% if product.rating %}
+            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.rating }} / 5</small>
             {% else %}
             <small class="text-muted">No Rating</small>
             {% endif %}
