--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -35,8 +35,8 @@
                 </a>
             </p>
             {% endif %}
-            {% if product.average_rating %}
-            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.average_rating }} / 5
+            {% if product.rating %}
+            <small><i class="fas fa-star me-1 text-warning"></i>{{ product.rating }} / 5
                 ({{ reviews.count }})</small>
             {% else %}
             <small class="text-muted">No Rating</small>
