--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -88,8 +88,8 @@ Browse Our Store
                     {% endif %}
                     <p class="card-body product-name mb-0">{{ product.name }}</p>
                     <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-                    {% if product.average_rating %}
-                    <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+                    {% if product.rating %}
+                    <p class="text-start ps-2 fs-6 mb-0">{{ product.rating }} / 5 <i
                             class="fa-solid fa-star star-rating text-warning"></i></p>
                     {% else %}
                     <small class="text-muted text-start ps-2">No Rating</small>
