--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,8 +34,8 @@ Welcome!
             </a>
             <p class="card-body product-name mb-0">{{ product.name }}</p>
             <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-            {% if product.average_rating %}
-            <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+            {% if product.rating %}
+            <p class="text-start ps-2 fs-6 mb-0">{{ product.rating }} / 5 <i
                     class="fa-solid fa-star star-rating text-warning"></i></p>
             {% else %}
             <small class="text-muted text-start ps-2">No Rating</small>
@@ -89,8 +89,8 @@ Welcome!
             </a>
             <p class="card-body product-name mb-0">{{ product.name }}</p>
             <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-            {% if product.average_rating %}
-            <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+            {% if product.rating %}
+            <p class="text-start ps-2 fs-6 mb-0">{{ product.rating }} / 5 <i
                     class="fa-solid fa-star star-rating text-warning"></i></p>
             {% else %}
             <small class="text-muted text-start ps-2">No Rating</small>
@@ -143,8 +143,8 @@ Welcome!
             </a>
             <p class="card-body product-name mb-0">{{ product.name }}</p>
             <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-            {% if product.average_rating %}
-            <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+            {% if product.rating %}
+            <p class="text-start ps-2 fs-6 mb-0">{{ product.rating }} / 5 <i
                     class="fa-solid fa-star star-rating text-warning"></i></p>
             {% else %}
             <small class="text-muted text-start ps-2">No Rating</small>
@@ -197,8 +197,8 @@ Welcome!
             </a>
             <p class="card-body product-name mb-0">{{ product.name }}</p>
             <p class="text-start ps-2 fw-bold lead mb-0">£{{ product.price }}</p>
-            {% if product.average_rating %}
-            <p class="text-start ps-2 fs-6 mb-0">{{ product.average_rating }} / 5 <i
+            {% if product.rating %}
+            <p class="text-start ps-2 fs-6 mb-0">{{ product.rating }} / 5 <i
                     class="fa-solid fa-star star-rating text-warning"></i></p>
             {% else %}
             <small class="text-muted text-start ps-2">No Rating</small>
