--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -7,12 +7,13 @@ Add a Product
 {% endblock %}
 
 {% block content %}
+<!-- Product Management title -->
 <div class="row">
     <div class="col-12">
         <h2 class="fw-bold mb-4 text-center">Product Management</h2>
     </div>
 </div>
-
+<!-- Form for adding products to the store -->
 <div class="row justify-content-center">
     <div class="col-12 col-md-8">
         <h5 class="text-muted">Add a Product to the Store</h5>
@@ -37,7 +38,8 @@ Add a Product
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
+    // Displays the name of the image file to be set.
     $('#new-image').change(function () {
         var file = $('#new-image')[0].files[0];
         $('#filename').text(`Image will be set to: ${file.name}`);
