--- a/templates/includes/toasts/toast-error.html
+++ b/templates/includes/toasts/toast-error.html
@@ -1,3 +1,4 @@
+<!-- Displays error messages -->
 <div class="message-container">
     <div class="toast custom-toast" data-bs-autohide="false">
         <div class="toast-header bg-danger text-light">
