--- a/templates/includes/toasts/toast-info.html
+++ b/templates/includes/toasts/toast-info.html
@@ -1,3 +1,4 @@
+<!-- Displays info messages -->
 <div class="message-container">
     <div class="toast custom-toast" data-bs-autohide="false">
         <div class="toast-header bg-info text-light">
