--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -12,7 +12,7 @@ Edit Product
         <h2 class="fw-bold mb-4 text-center">Product Management</h2>
     </div>
 </div>
-
+<!-- Edit product form -->
 <div class="row justify-content-center">
     <div class="col-12 col-md-8">
         <h5 class="text-muted">Editing {{ product.name }}</h5>
@@ -39,6 +39,7 @@ Edit Product
 {% block postloadjs %}
 {{ block.super }}
 <script>
+    // Displays name of new image file
     $('#new-image').change(function () {
         var file = $('#new-image')[0].files[0];
         $('#filename').text(`Image will be set to: ${file.name}`);
