--- a/products/templates/products/edit_review.html
+++ b/products/templates/products/edit_review.html
@@ -7,11 +7,13 @@ Edit Review
 {% endblock %}
 
 {% block content %}
+<!-- Edit review title -->
 <div class="row">
     <div class="col-12">
         <h2 class="fw-bold mb-4 text-center">Edit Review</h2>
     </div>
 </div>
+<!-- Edit review form -->
 <div class="row justify-content-center">
     <div class="col-12 col-md-8">
         <h5 class="text-muted">Editing Review for {{ product.name }}</h5>
