--- a/templates/includes/toasts/toast-warning.html
+++ b/templates/includes/toasts/toast-warning.html
@@ -1,3 +1,4 @@
+<!-- Displays warning messages -->
 <div class="message-container">
     <div class="toast custom-toast" data-bs-autohide="false">
         <div class="toast-header bg-warning text-light">
