--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -7,12 +7,15 @@ Your Wishlist
 {% endblock %}
 
 {% block content %}
+<!-- Wishlist title -->
 <div class="text-center">
     <h2 class="fw-bold mb-3">{{ request.user }}'s Wishlist</h2>
 </div>
+<!-- Wishlist items -->
 {% if wishlist_item %}
 <div class="row">
     <div class="col">
+        <!-- Wishlist item view for small screens -->
         <div class="d-block d-md-none">
             {% for item in wishlist_item %}
                 <div class="row">
@@ -42,12 +45,14 @@ Your Wishlist
                 </div>
                 <div class="row"><div class="col"><hr></div></div>
             {% endfor %}
+            <!-- Back to top button -->
             <div class="btt-button shadow-sm border border-black">
                 <a class="btt-link d-flex h-100">
                     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
                 </a>	
             </div>
         </div>
+        <!-- Wishlist item view for medium and up screens -->
         <div class="table-responsive rounded d-none d-md-block">
             <table class="table table-sm">
                 <thead class="text-black">
@@ -81,14 +86,16 @@ Your Wishlist
                             <p class="my-0">£{{ item.price }}</p>
                         </td>
                         <td class="py-3 align-middle">
+                            <!-- Add to bag button -->
                             <form class="form" action="{% url 'add_to_bag' item.id %}" method="POST">
                                 {% csrf_token %}
-                                <input type="hidden" name="quantity" type="Number" value="1">
+                                <input name="quantity" type="Number" value="1" class="d-none">
                                 <input type="submit" class="btn btn-success w-100" value="Add to Bag">
                                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             </form>
                         </td>
                         <td class="py-3 align-middle text-center">
+                            <!-- Remove from wishlist button -->
                             <a href="{% url 'add_remove_wishlist' item.id %}" class="btn btn-danger"><i class="fa-solid fa-xmark"></i></a>
                         </td>
                     </tr>
@@ -97,6 +104,7 @@ Your Wishlist
         </div>
     </div>
 </div>
+<!-- Empty wishlist -->
 {% else %}
 <div class="row text-center">
     <div class="col">
