--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -54,7 +54,7 @@ Delete Product
             <small class="text-muted">No Rating</small>
             {% endif %}
             <hr>
-            <p class="mt-1">{{ product.description | safe }}</p>
+            {{ product.description | safe }}
         </div>
     </div>
 </div>
