--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
     // From CI Boutique Ado walkthrough
      
     // Disable +/- buttons outside 1-99 range. 
