--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -154,8 +154,8 @@ My bag
     // Remove item and reload on click
     $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/bag/remove/${itemId}/`;
+        var itemClass = $(this).attr('class').split('remove_')[1];
+        var url = `/bag/remove/${itemClass}/`;
         var data = {
             'csrfmiddlewaretoken': csrfToken
         };
