--- a/bag/templates/bag/quantity_form.html
+++ b/bag/templates/bag/quantity_form.html
@@ -26,4 +26,4 @@
     </div>
 </form>
 <a class="update-link text-primary"><small>Update</small></a>
-<a class="remove-item text-danger float-end" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+<a class="remove-item text-danger float-end remove_{{ item.item_id }}"><small>Remove</small></a>
