--- a/blog/templates/blog/delete_comment.html
+++ b/blog/templates/blog/delete_comment.html
@@ -7,13 +7,11 @@ Delete Comment
 {% endblock %}
 
 {% block content %}
-<!-- Checks the current user is same as the comment author or is a superuser -->
-{% if request.user == blogcomment.author or request.user.is_superuser %}
-<!-- Delete Blog Post form -->
+<!-- Delete Blog comment form -->
 <div class="row">
     <div class="col-12 text-center">
-        <h2 class="fw-bold mb-4 text-center">Delete Comment</h2>
-        <h5 class="text-muted">You are about to delete your comment.</h5>
+        <h2 class="fw-bold mb-4">Delete Comment</h2>
+        <h5 class="text-muted">You are about to delete your comment for {{ post_title }}</h5>
         <p class="mt-2 text-black">Are you sure? This <strong class="text-danger text-uppercase">cannot</strong> be
             undone!</p>
         <form method="post">
@@ -25,6 +23,8 @@ Delete Comment
         </form>
     </div>
 </div>
+<hr>
+<!-- Comment preview -->
 <div class="card mb-3">
     <div class="card-body">
         <div class="row">
@@ -40,14 +40,4 @@ Delete Comment
         </div>
     </div>
 </div>
-<!-- Displays message if the current user is not the comment author -->
-{% else %}
-<div class="text-center">
-    <h1 class="fw-bold mb-5">Access Denied</h1>
-    <p class="fs-4">You do not have permission to access this.</p>
-    <a href="{% url 'home' %}" class="btn btn-dark">
-        Return to Home
-    </a>
-</div>
-{% endif %}
 {% endblock %}
