--- a/blog/templates/blog/edit_comment.html
+++ b/blog/templates/blog/edit_comment.html
@@ -7,12 +7,10 @@ Edit Comment
 
 {% block content %}
 
-<!-- Checks the current user is same as the comment author or is a superuser -->
-{% if request.user == blogcomment.author or request.user.is_superuser %}
 <!-- Edit Comment title-->
 <div class="row">
     <div class="col-12 text-center pt-3">
-        <h4 class="fw-semibold">Editing comment for: {{ post_title }}</h4>
+        <h2 class="fw-semibold">Editing comment for {{ post_title }}</h2>
     </div>
 </div>
 <!-- Edit Comment form -->
@@ -26,15 +24,5 @@ Edit Comment
         </form>
     </div>
 </div>
-<!-- Displays message if the current user is not the comment author -->
-{% else %}
-<div class="text-center">
-    <h1 class="fw-bold mb-5">Access Denied</h1>
-    <p class="fs-4">You do not have permission to access this.</p>
-    <a href="{% url 'home' %}" class="btn btn-dark">
-        Return to Home
-    </a>
-</div>
-{% endif %}
 
 {% endblock %}
