--- a/products/templates/products/delete_review.html
+++ b/products/templates/products/delete_review.html
@@ -25,20 +25,22 @@ Delete Review
     </div>
 </div>
 <!-- Review preview -->
-<div class="col-12">
-    <div class="card mb-3">
-        <div class="card-body">
-            <div class="row">
-                <p class="col-md-2 col-6 fw-semibold">{{ review.author }}</p>
-                <p class="col-md-2 col-6">Rating: {{ review.rating }} <i
-                        class="fa-solid fa-star text-warning"></i></p>
-                <p class="col-md-2 col-6"><span class="fw-bold">Created:</span> {{ review.created_on }}</p>
-                <p class="col-md-2 col-6"><span class="fw-bold">Edited:</span> {{ review.edited_on }}</p>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-12">
-                    {{ review.review_content | linebreaks }}
+<div class="row">
+    <div class="col-12">
+        <div class="card mb-3">
+            <div class="card-body">
+                <div class="row">
+                    <p class="col-md-2 col-6 fw-semibold">{{ review.author }}</p>
+                    <p class="col-md-2 col-6">Rating: {{ review.rating }} <i class="fa-solid fa-star text-warning"></i>
+                    </p>
+                    <p class="col-md-2 col-6"><span class="fw-bold">Created:</span> {{ review.created_on }}</p>
+                    <p class="col-md-2 col-6"><span class="fw-bold">Edited:</span> {{ review.edited_on }}</p>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12">
+                        {{ review.review_content | linebreaks }}
+                    </div>
                 </div>
             </div>
         </div>
