--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -19,7 +19,13 @@ Add Blog post
         <hr>
         <form action="{% url 'add_post' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form | crispy }}
+            {% for field in form %}
+                {% if field.name != 'blog_image' %}
+                    {{ field | as_crispy_field | safe }}
+                {% else %}
+                    {{ field | safe }}
+                {% endif %}
+            {% endfor %}
             <div class="text-center">
                 <a href="{% url 'blog' %}" class="btn btn-danger">Cancel</a>
                 <button class="btn btn-success" type="submit">Add Post</button>
@@ -28,4 +34,15 @@ Add Blog post
     </div>
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script>
+    // Displays the name of the image file to be set.
+    $('#new-image').change(function () {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+    });
+</script>
 {% endblock %}
