--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -20,7 +20,13 @@ Edit a Blog Post
         <hr>
         <form method="POST" class="form mb-2" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form | crispy }}
+            {% for field in form %}
+                {% if field.name != 'blog_image' %}
+                    {{ field | as_crispy_field | safe }}
+                {% else %}
+                    {{ field | safe }}
+                {% endif %}
+            {% endfor %}
             <div class="text-center">
                 <a href="{% url 'blog' %}" class="btn btn-danger">Cancel</a>
                 <button class="btn btn-success" type="submit">Edit Post</button>
@@ -28,4 +34,15 @@ Edit a Blog Post
         </form>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script>
+    // Displays name of new image file
+    $('#new-image').change(function () {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+    });
+</script>
 {% endblock %}
