--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -7,6 +7,7 @@
     overflow-y: auto;
 }
 
+/* Country field selector */
 #id_default_country,
 #id_default_country option:not(:first-child) {
     color: #000;
